ingresses/2-hubgtw/overlays/customers/api-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/customers`) && Query(`canary`, `true`)
      services:
        - name: customers-canary
          kind: TraefikService
          namespace: apps
    - kind: Rule
      match: Host(`api.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/customers`) && Header(`version`, `v3`)
      services:
        - name: customer-app-v3
          port: 3000
    - kind: Rule
      match: Host(`api.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/customers`) && Method(`POST`)
      services:
        - name: customer-app
          port: 3000
      middlewares:
        - name: customers-basic-auth
    - kind: Rule
      match: Host(`api.${CLUSTERNAME}.${DOMAINNAME}`) && PathPrefix(`/customers`) && Method(`GET`)
      services:
        - name: customer-app
          port: 3000
  tls:
